feat: 댓글 작성 내용 서버로 요청

--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -38,7 +38,7 @@
        th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm:ss')}">
   </div>
 </div>
-<div th:replace="fragments.html :: comment-list"></div>
+<div th:replace="fragments.html :: comment"></div>
 </body>
 <script>
   function confirmDelete() {
