feat: 게시글 상세 조회 시 댓글 목록 출력 기능 추가

--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -49,7 +49,21 @@
   </div>
 </div>
 
-<div th:replace="fragments.html :: comment-list"></div>
+<div id="comment-list">
+  <div class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
+    <div class="card-body" bis_skin_checked="1" th:each="comment: ${commentList}">
+      <h6 class="card-subtitle mb-2 text-muted" th:text="${comment.commentWriter}"></h6>
+      <p class="card-text" th:text="${comment.commentContents}"></p>
+      <div style="text-align: right">
+        <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
+        <a href="#" class="card-link">수정</a>
+        <a href="#" class="card-link">삭제</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
 <script th:inline="javascript">
   const commentWrite = () => {
@@ -75,7 +89,23 @@
         "myplaceId": id
       },
       success: function (res) {
-        console.log("요청 성공", res)
+        console.log("요청성공", res);
+        let output = "";
+
+        for (let i in res) {
+          output += '<div class="card mb-3" style="width: 60%; margin: 10px auto;">';
+          output += '<div class="card-body">';
+          output += '<h6 class="card-subtitle mb-2 text-muted">' + res[i].commentWriter + '</h6>';
+          output += '<p class="card-text">' + res[i].commentContents + '</p>';
+          output += '<div style="text-align: right">';
+          output += '<p>' + res[i].commentCreatedTime + '</p>';
+          output += '<a href="#" class="card-link">수정</a>';
+          output += '<a href="#" class="card-link">삭제</a>';
+          output += '</div></div></div>';
+        }
+
+        document.getElementById('comment-list').innerHTML = output;
+        document.getElementById('commentContent').value = ''; // 내용 입력란 초기화
       },
       error: function(err) {
         console.log("요청 실패", err)
