--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -50,8 +50,6 @@
     <button type="button" class="btn btn-success" style="float: right;" onclick="commentWrite()">댓글작성</button>
   </div>
 </div>
-
-
 <div id="comment-list">
   <div class="card" bis_skin_checked="1" th:each="comment: ${commentList}" style="width: 60%; margin: 15px auto;">
     <div class="card-body" bis_skin_checked="1">
@@ -59,15 +57,14 @@
       <p class="card-text" th:text="${comment.commentContents}"></p>
       <div style="text-align: right">
         <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
-        <a href="#" class="card-link"
+        <a th:if="${comment.commentWriterEmail == #authentication.name}" class="card-link"
            th:data-comment-id="${comment.id}" th:data-comment-writer="${comment.commentWriter}" th:data-comment-contents="${comment.commentContents}"
            onclick="showEditCommentForm(this)">수정</a>
-        <a th:href="@{|/comment/delete/${comment.id}|}" class="card-link" onclick="confirmDelete()">삭제</a>
+        <a th:if="${comment.commentWriterEmail == #authentication.name}" th:href="@{|/comment/delete/${comment.id}|}" class="card-link" onclick="confirmDelete()">삭제</a>
       </div>
     </div>
   </div>
 </div>
-
 <div class="card" bis_skin_checked="1" style="width: 60%; margin: 50px auto; display: none;" id="editCommentCard">
   <div class="card-body" bis_skin_checked="1">
     <h6 class="card-subtitle mb-2 text-muted" id="editCommentWriter"></h6>
@@ -84,10 +81,12 @@
   const commentWrite = () => {
 
     const writer = [[${nickname}]];
+    const email = [[${username}]]
     const contents = document.getElementById("commentContent").value;
     const id = [[${myplace.id}]]; // 게시글 번호
 
     console.log("작성자: ", writer);
+    console.log("이메일: ", email);
     console.log("내용: ", contents);
     console.log("게시글 번호: ", id);
 
@@ -100,6 +99,7 @@
       },
       data: {
         "commentWriter": writer,
+        "commentWriterEmail": email,
         "commentContents": contents,
         "myplaceId": id
       },
@@ -114,8 +114,6 @@
           output += '<p class="card-text">' + res[i].commentContents + '</p>';
           output += '<div style="text-align: right">';
           output += '<p>' + res[i].commentCreatedTime + '</p>';
-          // output += '<a href="#" class="card-link">수정</a>';
-          // output += '<a href="#" class="card-link">삭제</a>';
           output += '<a href="#" class="card-link">수정</a>';
           output += '<a href="#" class="card-link">삭제</a>';
           output += '</div></div></div>';
