--- a/restaurant/src/main/resources/templates/fragments.html
+++ b/restaurant/src/main/resources/templates/fragments.html
@@ -9,14 +9,14 @@
 <body>
 <nav th:fragment="main-nav" class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container-fluid" bis_skin_checked="1">
-        <a class="navbar-brand" href="/main">My Hotple</a>
+        <a class="navbar-brand" href="/">My Hotple</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Map</a>
@@ -24,33 +24,30 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/shared/list">Shared Place</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link active" href="/shared">Shared Place-->
-<!--                        <span class="visually-hidden">(current)</span>-->
-<!--                    </a>-->
-<!--                </li>-->
                 <li class="nav-item">
                     <a class="nav-link" href="/myplace/list">My Place</a>
                 </li>
             </ul>
-            <div>
-                <span class="navbar-text" style="margin-right: 30px"
-                      th:if="${nickname != null}">안녕하세요, <span th:text="${nickname}" ></span>님!</span>
-            </div>
-            <form id="logoutForm" action="/logout" method="post">
-                <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
-                    <button type="button"
-                            class="btn btn-secondary"
-                            th:onclick="|location.href='@{/mypage}'|">MyPage</button>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                    <button type="submit"
-                            class="btn btn-secondary">Logout</button>
+            <div th:if="${#authorization.expression('isAuthenticated()')}">
+                <div style="display: flex; align-items: center;">
+                    <span class="navbar-text" style="margin-right: 30px" th:if="${nickname != null}">안녕하세요, <span th:text="${nickname}" ></span>님!</span>
+                    <form id="logoutForm" action="/logout" method="post">
+                        <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
+                            <button type="button" class="btn btn-secondary" th:onclick="|location.href='@{/mypage}'|">MyPage</button>
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                            <button type="submit" class="btn btn-secondary">Logout</button>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
+            <div th:unless="${#authorization.expression('isAuthenticated()')}">
+                <button type="button"
+                        class="btn btn-secondary"
+                        th:onclick="|location.href='@{/login}'|">login</button>
+            </div>
         </div>
     </div>
 </nav>
-
 <footer th:fragment="write-edit">
     <form name="myplaceForm" action="/myplace/save" method="post" enctype="multipart/form-data">
         <fieldset>
@@ -94,9 +91,6 @@
             </div>
         </fieldset>
     </form>
-</footer>
-<footer th:fragment="comment-list">
-
 </footer>
 </body>
 </html>
