--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -40,7 +40,8 @@
   </div>
 </div>
 
-<div class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
+<div th:if="${#authorization.expression('isAuthenticated()')}"
+     class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
   <div class="card-body" bis_skin_checked="1">
     <h6 class="card-subtitle mb-2 text-muted" id="commentWriter" th:text="${nickname}"></h6>
     <div bis_skin_checked="1">
@@ -50,6 +51,19 @@
     <button type="button" class="btn btn-success" style="float: right;" onclick="commentWrite()">댓글작성</button>
   </div>
 </div>
+
+<div th:unless="${#authorization.expression('isAuthenticated()')}"
+     class="card" bis_skin_checked="1" style="width: 60%; margin: 50px auto;">
+  <div class="card-body" bis_skin_checked="1">
+    <div bis_skin_checked="1">
+      <textarea type="text" class="form-control" placeholder="로그인 후 댓글을 작성할 수 있습니다."
+                style="margin-top: 10px; margin-bottom: 10px;" rows="3" disabled></textarea>
+    </div>
+    <button type="button" class="btn btn-success" style="float: right;">댓글작성</button>
+  </div>
+</div>
+
+
 <div id="comment-list">
   <div class="card" bis_skin_checked="1" th:each="comment: ${commentList}" style="width: 60%; margin: 15px auto;">
     <div class="card-body" bis_skin_checked="1">
