--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -38,6 +38,9 @@
   <div class="card-footer text-muted" bis_skin_checked="1"
        th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm:ss')}">
   </div>
+  <div class="card-footer text-muted" bis_skin_checked="1"
+       th:if="${myplace.updatedTime != null}" th:text="*{#temporals.format(myplace.updatedTime, 'yyyy-MM-dd HH:mm:ss')} + '(수정됨)'">
+  </div>
 </div>
 
 <div th:if="${#authorization.expression('isAuthenticated()')}"
