--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -12,8 +12,7 @@
   <h3 class="card-header" th:text="${myplace.placeName}"></h3>
   <div class="card-body" bis_skin_checked="1">
     <h5 class="card-title" th:text="${myplace.address}"></h5>
-    <h6 class="card-subtitle text-muted" style="text-align: right"
-        th:utext="' 글쓴이: ' + ${myplace.userNickname + '<br> 조회수: ' + myplace.views}"></h6>
+    <h6 class="card-subtitle text-muted" style="text-align: right" th:utext="' 글쓴이: ' + ${myplace.userNickname + '<br> 조회수: ' + myplace.views}"></h6>
   </div>
   <svg th:if="${myplace.fileAttached == 1}"
        xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="0" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -42,7 +41,6 @@
        th:if="${myplace.updatedTime != null}" th:text="*{#temporals.format(myplace.updatedTime, 'yyyy-MM-dd HH:mm:ss')} + '(수정됨)'">
   </div>
 </div>
-
 <div th:if="${#authorization.expression('isAuthenticated()')}"
      class="card" bis_skin_checked="1"  style="width: 60%; margin: 50px auto;">
   <div class="card-body" bis_skin_checked="1">
@@ -70,7 +68,10 @@
       <h6 class="card-subtitle mb-2 text-muted" th:text="${comment.commentWriter}"></h6>
       <p class="card-text" th:text="${comment.commentContents}"></p>
       <div style="text-align: right">
-        <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss')}"></p>
+        <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss')}" style="margin-bottom: 0px"></p>
+        <p th:if="${comment.commentUpdatedTime != null}" th:text="*{#temporals.format(comment.commentUpdatedTime, 'yyyy-MM-dd HH:mm:ss')} + '(수정됨)'"></p>
+<!--        <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss') + '    ' + (comment.commentUpdatedTime != null ? #temporals.format(comment.commentUpdatedTime, 'yyyy-MM-dd HH:mm:ss') + '(수정됨)' : '')}"></p>-->
+
         <a th:if="${comment.commentWriterEmail == #authentication.name}" class="card-link"
            th:data-comment-id="${comment.id}" th:data-comment-writer="${comment.commentWriter}" th:data-comment-contents="${comment.commentContents}"
            onclick="showEditCommentForm(this)">수정</a>
