--- a/restaurant/src/main/resources/templates/shared/test.html
+++ b/restaurant/src/main/resources/templates/shared/test.html
@@ -27,7 +27,7 @@
         <td th:text="${myplace.userNickname}"></td>
         <td th:text="*{#temporals.format(myplace.createdTime, 'yyyy-MM-dd HH:mm')}"></td>
         <td th:text="${myplace.views}"></td>
-        <td th:text="${myplace.likes}"></td>
+<!--        <td th:text="${myplace.likes}"></td>-->
     </tr>
     </tbody>
 </table>
