--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -30,7 +30,8 @@
     <div id="map" style="width:100%;height:350px;"></div>
   </ul>
   <div class="card-body" bis_skin_checked="1">
-    <a href="#" class="card-link">좋아요</a>
+<!--    <a href="#" class="card-link">좋아요</a>-->
+    <a href="#" class="card-link" onclick="like()">좋아요</a>
     <div style="text-align: right">
       <a th:href="@{/shared/list(page=${page})}" class="card-link">목록</a>
       <a th:if="${myplace.user.username == #authentication.name}" th:href="@{|/myplace/edit/${myplace.id}|}" class="card-link">수정</a>
@@ -94,6 +95,31 @@
 </body>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
 <script th:inline="javascript">
+  function like() {
+    const myplaceId = [[${myplace.id}]]; // 게시글 번호
+    const userId = [[${userId}]]; // 사용자 ID
+
+    $.ajax({
+      type: "post",
+      url: "/like/add",
+      contentType: "application/json",
+      headers: {
+        "X-CSRF-TOKEN": $('[name="_csrf"]').val()
+      },
+      data: JSON.stringify({
+        "myplaceId": myplaceId,
+        "userId": userId
+      }),
+      success: function (res) {
+        console.log("좋아요 요청 성공", res);
+
+      },
+      error: function (err) {
+        console.log("좋아요 요청 실패", err);
+      }
+    });
+  }
+
   var address = [[${myplace.address}]];
   var placeName = [[${myplace.placeName}]]
 
