--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -97,7 +97,7 @@
 <script th:inline="javascript">
   function like() {
     const myplaceId = [[${myplace.id}]]; // 게시글 번호
-    const userId = [[${userId}]]; // 사용자 ID
+    const userId = [[${id}]]; // 사용자 ID
 
     $.ajax({
       type: "post",
@@ -111,10 +111,12 @@
         "userId": userId
       }),
       success: function (res) {
+        console.log("요청 후", myplaceId, userId);
         console.log("좋아요 요청 성공", res);
 
       },
       error: function (err) {
+        console.log("요청 후", myplaceId, userId);
         console.log("좋아요 요청 실패", err);
       }
     });
