--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -30,8 +30,12 @@
     <div id="map" style="width:100%;height:350px;"></div>
   </ul>
   <div class="card-body" bis_skin_checked="1">
-<!--    <a href="#" class="card-link">좋아요</a>-->
-    <a href="#" class="card-link" onclick="like()">좋아요</a>
+    <div th:if="${#authorization.expression('isAuthenticated()')}">
+      <a href="#" class="card-link" onclick="like()">좋아요</a>
+    </div>
+    <div th:unless="${#authorization.expression('isAuthenticated()')}">
+      <a href="#" class="card-link" onclick="showLoginAlert()">좋아요</a>
+    </div>
     <div style="text-align: right">
       <a th:href="@{/shared/list(page=${page})}" class="card-link">목록</a>
       <a th:if="${myplace.user.username == #authentication.name}" th:href="@{|/myplace/edit/${myplace.id}|}" class="card-link">수정</a>
@@ -95,6 +99,10 @@
 </body>
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
 <script th:inline="javascript">
+  function showLoginAlert() {
+    alert('로그인이 필요합니다.');
+  }
+
   function like() {
     const myplaceId = [[${myplace.id}]]; // 게시글 번호
     const userId = [[${id}]]; // 사용자 ID
