--- a/restaurant/src/main/resources/templates/main.html
+++ b/restaurant/src/main/resources/templates/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
-<h2 align="center" style="margin-top: 50px; margin-bottom: 50px">나만의 장소를 저장하세요!</h2>
+<h2 align="center" style="margin-top: 50px; margin-bottom: 50px">나만의 장소를 저장하고 공유하세요!</h2>
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
     <div id="menu_wrap" class="bg_white">
@@ -28,12 +28,14 @@
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
 <!--<script src="../js/mainMap.js"></script>-->
 <script type="text/javascript" th:src="@{/js/mainMap.js}"></script>
-<div style="text-align: center; margin-top: 60px; margin-bottom: 60px " >
-    <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-    <p><small>This line of text is meant to be treated as fine print.</small></p>
-    <p>The following is <strong>rendered as bold text</strong>.</p>
-    <p>The following is <em>rendered as italicized text</em>.</p>
-    <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+<div style="text-align: center; margin-top: 60px; margin-bottom: 60px;" >
+    <p>어딘가 특별한 곳을 발견했을 때, 그 순간을 기억하고 싶지 않나요?</p>
+    <p><strong>My Hotple</strong>는 여러분이 소중히 여기는 맛집, 관광지, 혹은 아늑한 카페와 같은 장소를 기록하고 공유할 수 있는 플랫폼입니다.</p>
+    <p>여행 중 발견한 숨겨진 보석 같은 곳이나 일상 속 작은 행복을 담은 카페, 그 어떤 장소라도 이제는 당신의 손끝에 담을 수 있습니다.</p>
+    <p>간편한 저장 기능을 통해 그 순간을 기억할 수 있을 뿐만 아니라, 나중에 다시 찾아볼 수도 있습니다.</p>
+    <p>더 나아가, 당신이 발견한 이 특별한 장소를 다른 이들과 공유하세요! 친구, 가족 또는 다른 사람들과 함께 나누면서 그 곳의 매력을 함께 느껴보세요.</p>
+    <p><strong>My Hotple</strong>에서는 다양한 사람들의 추천과 경험을 만날 수 있을 것입니다.</p>
+
 </div>
 </body>
 </html>
