fix: 게시글 삭제 오류 수정 - 게시글이 삭제되지 않는 문제를 해결

--- a/restaurant/src/main/resources/templates/main.html
+++ b/restaurant/src/main/resources/templates/main.html
@@ -31,7 +31,7 @@
 <div style="text-align: center; margin-top: 60px; margin-bottom: 60px;" >
     <p>어딘가 특별한 곳을 발견했을 때, 그 순간을 기억하고 싶지 않나요?</p>
     <p><strong>My Hotple</strong>는 여러분이 소중히 여기는 맛집, 관광지, 혹은 아늑한 카페와 같은 장소를 기록하고 공유할 수 있는 플랫폼입니다.</p>
-    <p>여행 중 발견한 숨겨진 보석 같은 곳이나 일상 속 작은 행복을 담은 카페, 그 어떤 장소라도 이제는 당신의 손끝에 담을 수 있습니다.</p>
+    <p>여행 중 발견한 숨겨진 보석 같은 곳이나 일상 속 작은 행복을 담은 카페, 그 어떤 장소라도 이제는 여러분의 손끝에 담을 수 있습니다.</p>
     <p>간편한 저장 기능을 통해 그 순간을 기억할 수 있을 뿐만 아니라, 나중에 다시 찾아볼 수도 있습니다.</p>
     <p>더 나아가, 당신이 발견한 이 특별한 장소를 다른 이들과 공유하세요! 친구, 가족 또는 다른 사람들과 함께 나누면서 그 곳의 매력을 함께 느껴보세요.</p>
     <p><strong>My Hotple</strong>에서는 다양한 사람들의 추천과 경험을 만날 수 있을 것입니다.</p>
