--- a/restaurant/src/main/resources/templates/mypage.html
+++ b/restaurant/src/main/resources/templates/mypage.html
@@ -30,8 +30,7 @@
         </fieldset>
     </div>
 </div>
-<div id="comment" style="display: none; flex-direction: column; width: 70%; margin: 0 a
-uto;">
+<div id="comment" style="display: none; flex-direction: column; width: 70%; margin: 0 auto;">
     <div bis_skin_checked="1">
         <table class="table table-hover" style="text-align: center; width: 75%;  margin: 40px auto;">
             <thead>
