--- a/restaurant/src/main/resources/templates/myplace/edit.html
+++ b/restaurant/src/main/resources/templates/myplace/edit.html
@@ -41,6 +41,20 @@
             <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
             <input class="form-control" type="file" id="formFile" name="photo">
         </div>
+        <!-- 파일이 첨부되어 있는 경우 표시할 부분 -->
+        <div th:if="${myplaceEdit.originalFileName != null}" class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
+            <label class="form-label mt-4">현재 첨부된 파일</label>
+            <div>
+                <!-- 각 파일에 대한 정보를 반복하여 표시 -->
+                <div th:each="file, iterStat : ${myplaceEdit.originalFileName}">
+                    <span th:text="${file}"></span>
+                    <!-- 이 파일에 대한 삭제 버튼 -->
+                    <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+                    <button type="button" class="btn btn-link" onclick="deleteFile('${file}')">삭제</button>
+                    <br>
+                </div>
+            </div>
+        </div>
         <fieldset class="form-group">
             <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
                 <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${myplaceEdit.share}">
