feat: 파일 삭제 버튼 클릭 시 첨부된 파일 목록에서 해당 파일이 보이지 않도록 설정

--- a/restaurant/src/main/resources/templates/myplace/edit.html
+++ b/restaurant/src/main/resources/templates/myplace/edit.html
@@ -96,11 +96,15 @@
             data: JSON.stringify(requestData),
             success: function(response) {
                 console.log('파일 삭제 성공:', response);
+                // 삭제된 파일의 HTML 요소를 삭제
+                var fileToDelete = $("span:contains('" + originalFileName + "')").parent();
+                fileToDelete.remove();
             },
             error: function(xhr, status, error) {
                 console.error('파일 삭제 실패:', error);
             }
         });
     }
+
 </script>
 </html>
