--- a/restaurant/src/main/resources/templates/myplace/detail.html
+++ b/restaurant/src/main/resources/templates/myplace/detail.html
@@ -26,6 +26,9 @@
     <li class="list-group-item" th:text="${myplace.contents}"></li>
     <li class="list-group-item" th:text="'공유 여부: ' + ${myplace.share}"></li>
   </ul>
+  <ul class="list-group list-group-flush">
+    <div id="map" style="width:100%;height:350px;"></div>
+  </ul>
   <div class="card-body" bis_skin_checked="1">
     <div style="text-align: right">
       <a th:href="@{/myplace/list(page=${page})}" class="card-link">목록</a>
@@ -49,7 +52,48 @@
   </div>
 </div>
 </body>
-<script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=dd6b3f845722d3c2dbd4187f59ed228d&libraries=services"></script>
+<script th:inline="javascript">
+  var address = [[${myplace.address}]];
+  var placeName = [[${myplace.placeName}]]
+
+  var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+          mapOption = {
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+          };
+
+  // 지도를 생성합니다
+  var map = new kakao.maps.Map(mapContainer, mapOption);
+
+  // 주소-좌표 변환 객체를 생성합니다
+  var geocoder = new kakao.maps.services.Geocoder();
+
+  // 주소로 좌표를 검색합니다
+  geocoder.addressSearch(address, function(result, status) {
+
+    // 정상적으로 검색이 완료됐으면
+    if (status === kakao.maps.services.Status.OK) {
+
+      var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+
+      // 결과값으로 받은 위치를 마커로 표시합니다
+      var marker = new kakao.maps.Marker({
+        map: map,
+        position: coords
+      });
+
+      // 인포윈도우로 장소에 대한 설명을 표시합니다
+      var infowindow = new kakao.maps.InfoWindow({
+        content: '<div style="width:150px;text-align:center;padding:6px 0;">' + placeName + '</div>'
+      });
+      infowindow.open(map, marker);
+
+      // 지도의 중심을 결과값으로 받은 위치로 이동시킵니다
+      map.setCenter(coords);
+    }
+  });
+
   function confirmDelete() {
     var result = confirm("삭제하시겠습니까?");
     if (result) {
