--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -5,6 +5,12 @@
   <title th:text="${myplace.placeName}"></title>
   <script type="text/javascript" th:src="@{/js/comment.js}"></script>
   <div th:replace="fragments.html :: main-head"></div>
+  <style>
+    .image-container {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
 <nav th:replace="fragments.html :: main-nav"></nav>
@@ -15,9 +21,9 @@
     <h6 class="card-subtitle text-muted" style="text-align: right" th:utext="' 글쓴이: ' + ${myplace.userNickname + '<br> 조회수: ' + myplace.views}"></h6>
   </div>
   <svg th:if="${myplace.fileAttached == 1}"
-       xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="0" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+       xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none image-container" style="width:100%;" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice">
     <text th:each="fileName: ${myplace.storedFileName}">
-      <img th:src="@{|/upload/${fileName}|}" alt="">
+      <img th:src="@{|/upload/${fileName}|}" alt="" class="image-container">
     </text>
   </svg>
   <div class="card-body" bis_skin_checked="1">
