--- a/restaurant/src/main/resources/templates/fragments.html
+++ b/restaurant/src/main/resources/templates/fragments.html
@@ -75,6 +75,7 @@
                 <label for="formFile" class="form-label mt-4">파일 첨부하기</label>
                 <input class="form-control" type="file" id="formFile" name="file" multiple>
             </div>
+            <input type="hidden" id="fileAttached" name="fileAttached" value="0"> <!-- Hidden input field to store file attachment status -->
             <fieldset class="form-group">
                 <div class="form-check form-switch" bis_skin_checked="1" style="width: 40%; margin-left: auto; margin-right: auto; margin-top: 30px">
                     <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" name="share" th:checked="${share}">
