--- a/restaurant/src/main/resources/templates/auth/join.html
+++ b/restaurant/src/main/resources/templates/auth/join.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <div th:replace="fragments.html :: main-head"></div>
+    <div th:replace="~{layout/head.html :: main-head}"></div>
     <title>My Hotple Join Page</title>
     <script type="text/javascript" th:src="@{/js/join.js}"></script>
 </head>
 <body>
-<nav th:replace="fragments.html :: main-nav"></nav>
+<nav th:replace="~{layout/nav.html :: main-nav}"></nav>
 <form th:action="@{/joinProc}" method="post" name="joinForm">
     <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto; text-align: center;">
         <h2 style="margin-top: 50px; margin-bottom: 50px">회원가입</h2>
