--- a/restaurant/src/main/resources/templates/layout/nav.html
+++ b/restaurant/src/main/resources/templates/layout/nav.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
-$END$
+<nav th:fragment="main-nav" class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+    <div class="container-fluid" bis_skin_checked="1">
+        <a class="navbar-brand" href="/">My Hotple</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01" bis_skin_checked="1">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/shared/list">Shared Place</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/myplace/list">My Place</a>
+                </li>
+            </ul>
+            <div th:if="${#authorization.expression('isAuthenticated()')}">
+                <div style="display: flex; align-items: center;">
+                    <span class="navbar-text" style="margin-right: 30px" th:if="${nickname != null}">안녕하세요, <span th:text="${nickname}" ></span>님!</span>
+                    <form id="logoutForm" action="/logout" method="post">
+                        <div class="btn-group" role="group" aria-label="Basic example" bis_skin_checked="1">
+                            <button type="button" class="btn btn-secondary" th:onclick="|location.href='@{/mypage}'|">MyPage</button>
+                            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                            <button type="submit" class="btn btn-secondary">Logout</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div th:unless="${#authorization.expression('isAuthenticated()')}">
+                <button type="button"
+                        class="btn btn-secondary"
+                        th:onclick="|location.href='@{/login}'|">login</button>
+            </div>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
