--- a/restaurant/src/main/resources/templates/myplace/edit.html
+++ b/restaurant/src/main/resources/templates/myplace/edit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <div th:replace="fragments.html :: main-head"></div>
+    <div th:replace="~{layout/head.html :: main-head}"></div>
     <title>My Hotple myplace page</title>
     <script type="text/javascript" th:src="@{/js/write.js}"></script>
 </head>
 <body>
-<nav th:replace="fragments.html :: main-nav"></nav>
+<nav th:replace="~{layout/nav.html :: main-nav}"></nav>
 <h3 style="margin: 50px; text-align: center;">내 장소 수정하기</h3>
 <form name="myplaceForm" action="/myplace/edit" method="post" enctype="multipart/form-data">
     <fieldset>
