--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title th:text="${myplace.placeName}"></title>
   <script type="text/javascript" th:src="@{/js/comment.js}"></script>
-  <div th:replace="fragments.html :: main-head"></div>
+  <div th:replace="~{layout/head.html :: main-head}"></div>
   <style>
     .image-container {
       max-width: 100%;
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-<nav th:replace="fragments.html :: main-nav"></nav>
+<nav th:replace="~{layout/nav.html :: main-nav}"></nav>
 <div class="card mb-3" bis_skin_checked="1" style="width: 60%; margin: 50px auto;">
   <h3 class="card-header" th:text="${myplace.placeName}"></h3>
   <div class="card-body" bis_skin_checked="1">
