fix: typo mypage.html, CommentController.java

--- a/restaurant/src/main/resources/templates/mypage.html
+++ b/restaurant/src/main/resources/templates/mypage.html
@@ -12,7 +12,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#profile" onclick="showDiv('profile')">Profile</a></li>
         <li class="breadcrumb-item"><a href="#comment" onclick="showDiv('comment')">Comment</a></li>
-        <li class="breadcrumb-item"><a href="#comment" onclick="showDiv('likes')">Likes</a></li>
+        <li class="breadcrumb-item"><a href="#likes" onclick="showDiv('likes')">Likes</a></li>
 
     </ol>
 </div>
