--- a/restaurant/src/main/resources/templates/myplace/edit.html
+++ b/restaurant/src/main/resources/templates/myplace/edit.html
@@ -33,7 +33,7 @@
             </select>
         </div>
         <div class="form-group" bis_skin_checked="1" style="width: 40%; margin: 0 auto;">
-            <label for="exampleTextarea" class="form-label mt-4"></label>
+            <label for="exampleTextarea" class="form-label mt-4">내용</label>
             <textarea class="form-control" id="exampleTextarea" rows="3" name="contents"
                       th:value="${myplaceEdit.contents}" th:text="${myplaceEdit.contents}"></textarea>
         </div>
