--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -42,10 +42,13 @@
     <div th:unless="${#authorization.expression('isAuthenticated()')}">
       <a href="#" class="card-link" onclick="showLoginAlert()">좋아요</a>
     </div>
-    <div style="text-align: right">
-      <a th:href="@{/shared/list(page=${page})}" class="card-link">목록</a>
-      <a th:if="${myplace.user.username == #authentication.name}" th:href="@{|/myplace/edit/${myplace.id}|}" class="card-link">수정</a>
-      <a th:if="${myplace.user.username == #authentication.name}" th:href="@{|/myplace/delete/${myplace.id}|}" class="card-link" onclick="confirmDelete()">삭제</a>
+    <div style="text-align: right; display: flex; justify-content: flex-end;">
+      <button th:onclick="|location.href='@{/shared/list(page=${page})}'|" class="btn btn-link">목록</button>
+      <button th:if="${myplace.user.username == #authentication.name}" th:onclick="|location.href='@{|/myplace/edit/${myplace.id}|}'|" class="btn btn-link">수정</button>
+      <form id="deleteForm" th:if="${myplace.user.username == #authentication.name}"
+            th:action="@{|/myplace/delete/${myplace.id}|}" th:method="delete">
+        <button type="submit" class="btn btn-link" onclick="return confirm('삭제하시겠습니까?')">삭제</button>
+      </form>
     </div>
   </div>
   <div class="card-footer text-muted" bis_skin_checked="1"
@@ -84,10 +87,15 @@
       <div style="text-align: right">
         <p th:text="*{#temporals.format(comment.commentCreatedTime, 'yyyy-MM-dd HH:mm:ss')}" style="margin-bottom: 0px"></p>
         <p th:if="${comment.commentUpdatedTime != null}" th:text="*{#temporals.format(comment.commentUpdatedTime, 'yyyy-MM-dd HH:mm:ss')} + '(수정됨)'"></p>
-        <a th:if="${comment.commentWriterEmail == #authentication.name}" class="card-link"
-           th:data-comment-id="${comment.id}" th:data-comment-writer="${comment.commentWriter}" th:data-comment-contents="${comment.commentContents}"
-           onclick="showEditCommentForm(this)">수정</a>
-        <a th:if="${comment.commentWriterEmail == #authentication.name}" th:href="@{|/comment/delete/${comment.id}|}" class="card-link" onclick="confirmDelete()">삭제</a>
+        <div style="display: flex; justify-content: flex-end;">
+          <button th:if="${comment.commentWriterEmail == #authentication.name}" class="btn btn-link"
+                  th:data-comment-id="${comment.id}" th:data-comment-writer="${comment.commentWriter}" th:data-comment-contents="${comment.commentContents}"
+                  onclick="showEditCommentForm(this)">수정</button>
+          <form id="commentDeleteForm" th:if="${comment.commentWriterEmail == #authentication.name}"
+                th:action="@{|/comment/delete/${comment.id}|}" th:method="delete">
+            <button type="submit" class="btn btn-link" onclick="return confirm('삭제하시겠습니까?')">삭제</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
@@ -251,7 +259,7 @@
     const contents = document.getElementById('editCommentContent').value;
 
     $.ajax({
-      type: "post",
+      type: "put",
       url: "/comment/edit/" + commentId,
       headers: {
         "X-CSRF-TOKEN": $('[name="_csrf"]').val()
@@ -289,13 +297,14 @@
 
     // 수정된 댓글과 일치하는 댓글을 찾아서 내용을 갱신
     commentList.forEach(commentCard => {
-      const commentId = commentCard.querySelector('.card-link').getAttribute('data-comment-id');
-      if (commentId === updatedComment.id.toString()) { // 이 부분 확인
+      const commentId = commentCard.querySelector('.btn-link').getAttribute('data-comment-id');
+      if (commentId === updatedComment.id.toString()) {
         commentCard.querySelector('.card-subtitle').innerText = updatedComment.commentWriter;
         commentCard.querySelector('.card-text').innerText = updatedComment.commentContents;
       }
     });
   }
+
 
   function confirmDelete() {
     var result = confirm("삭제하시겠습니까?");
